@@ -1,12 +1,9 @@
 package de.tum.cit.aet.usermanagement.service;
 
-import de.tum.cit.aet.core.util.StringUtil;
-import de.tum.cit.aet.usermanagement.dto.auth.OtpCompleteDTO;
 import jakarta.ws.rs.core.Response;
 import org.keycloak.OAuth2Constants;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.KeycloakBuilder;
-import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -47,39 +44,36 @@ public class KeycloakUserService {
         if (res == null || res.isEmpty()) {
             return Optional.empty();
         }
-        return Optional.of(res.getFirst().getId());
+        return Optional.of(res.get(0).getId());
     }
 
     /**
      * Ensures a user exists in Keycloak for the given email (creates one if missing).
      * <p>
-     * The created user is initialized with enabled=true and emailVerified=true.
-     * If a concurrent creation happens and Keycloak returns HTTP 409 (conflict), this method performs a follow-up
-     * lookup and returns the resulting user ID.
+     * The created user is initialized with {@code enabled=true} and {@code emailVerified=false}. If a concurrent
+     * creation happens and Keycloak returns HTTP 409 (conflict), this method performs a follow-up lookup and returns
+     * the resulting user ID.
      *
-     * @param body the OTP completion request containing email and optional profile information
+     * @param email the email address used as both username and email in Keycloak; must not be {@code null}
      * @return the Keycloak user ID corresponding to the email
      * @throws IllegalStateException if user creation fails with an unexpected status code
      */
-    public String ensureUser(OtpCompleteDTO body) {
-        String normalizedEmail = StringUtil.normalize(body.email(), true);
-        return findUserIdByEmail(normalizedEmail).orElseGet(() -> {
-            UserRepresentation newUserRepresentation = new UserRepresentation();
-            newUserRepresentation.setUsername(normalizedEmail);
-            newUserRepresentation.setEmail(normalizedEmail);
-            newUserRepresentation.setFirstName(StringUtil.normalize(body.profile() != null ? body.profile().firstName() : null, false));
-            newUserRepresentation.setLastName(StringUtil.normalize(body.profile() != null ? body.profile().lastName() : null, false));
-            newUserRepresentation.setEnabled(true);
-            newUserRepresentation.setEmailVerified(true);
+    public String ensureUser(String email) {
+        return findUserIdByEmail(email).orElseGet(() -> {
+            UserRepresentation u = new UserRepresentation();
+            u.setUsername(email);
+            u.setEmail(email);
+            u.setEnabled(true);
+            u.setEmailVerified(false);
 
-            try (Response resp = keycloak.realm(realm).users().create(newUserRepresentation)) {
+            try (Response resp = keycloak.realm(realm).users().create(u)) {
                 if (resp.getStatus() == 201 && resp.getLocation() != null) {
                     String path = resp.getLocation().getPath();
                     return path.substring(path.lastIndexOf('/') + 1);
                 }
                 // If created concurrently we might see 409; try lookup again
                 if (resp.getStatus() == 409) {
-                    return findUserIdByEmail(normalizedEmail).orElseThrow();
+                    return findUserIdByEmail(email).orElseThrow();
                 }
                 throw new IllegalStateException("Keycloak user create failed: status=" + resp.getStatus());
             }
@@ -87,29 +81,18 @@ public class KeycloakUserService {
     }
 
     /**
-     * Updates basic profile fields (firstName and lastName) of a Keycloak user.
-     * Blank or null inputs are ignored; existing values remain unchanged in that case.
-     * Names are normalized before being persisted.
+     * Sets the {@code emailVerified} flag to {@code true} for the given user, if not already set.
      *
-     * @param userId    Keycloak user ID
-     * @param firstName optional first name; ignored if null or blank
-     * @param lastName  optional last name; ignored if null or blank
+     * @param userId the Keycloak user ID; must not be {@code null}
      */
-    public void updateProfile(String userId, String firstName, String lastName) {
-        UserResource userResource = keycloak.realm(realm).users().get(userId);
-        UserRepresentation userRepresentation = userResource.toRepresentation();
-        if (userRepresentation == null) {
+    public void markEmailVerified(String userId) {
+        var userRes = keycloak.realm(realm).users().get(userId);
+        var rep = userRes.toRepresentation();
+        if (Boolean.TRUE.equals(rep.isEmailVerified())) {
             return;
         }
-        String normalizedFirstName = StringUtil.normalize(firstName, false);
-        if (!normalizedFirstName.isBlank()) {
-            userRepresentation.setFirstName(normalizedFirstName);
-        }
-        String normalizedLastName = StringUtil.normalize(lastName, false);
-        if (!normalizedLastName.isBlank()) {
-            userRepresentation.setLastName(normalizedLastName);
-        }
-        userResource.update(userRepresentation);
+        rep.setEmailVerified(true);
+        userRes.update(rep);
     }
 
     /**
